# precommit-message-preservation

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  test_precommit_message_preservation.py  unittest.cfg
precommit_message_preservation/: __init__.py
