[metadata]
author = Eli Ribble
author_email = eliribble@google.com
description = A library for preserving and restoring commit messages
long_description = file: README.md
long_description_content_type = text/markdown
name = precommit_message_preservation
url = https://github.com/EliRibble/precommit-message-preservation
version = 1.0

[options]
packages = find:
python_requires = >=3.6
include-package-data = True

[options.entry_points]
console_scripts =
  precommit-message-preservation = precommit_message_preservation:main

[bdist_wheel]
universal = True
